# libgeos

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure.ac  libgeos.Rproj
R/: RcppExports.R  flags.R  geos_config.R  libgeos.R
inst/: geos-config
man/: geos_c_api_version.Rd  geos_jtsport.Rd  geos_version.Rd  libgeos-package.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  libgeos.cpp
tools/: download_zip.R  prepare  prepare.sh
